--- a/components/navbar.html
+++ b/components/navbar.html
@@ -20,7 +20,7 @@
                         <a sty class="nav-link" href="registrarse.html"><b>REGISTRO</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="IniciarSesion.html"><b>ACCEDER</b></a>
+                        <a class="nav-link" href="iniciarSesion.html"><b>ACCEDER</b></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="torneos.html"><b>TORNEOS</b></a>
